links and citation added

--- a/howtocite/index.html
+++ b/howtocite/index.html
@@ -553,7 +553,7 @@
 
 <div class="universal-wrapper">
   
-    <div class="article-style"><p>Under construction</p>
+    <div class="article-style"><p>Pimentel, Carlos, Zheng, Mingchuan, Sainz-Díaz, C. Ignacio, &amp; Cartwright, Julyan H. E. (2022). Chemical Gardens Database (alpha-0.0.1) [Data set]. Zenodo. <a href="https://doi.org/10.5281/zenodo.6607125" target="_blank" rel="noopener">https://doi.org/10.5281/zenodo.6607125</a></p>
 </div>
   
 
