--- a/zotero/index.html
+++ b/zotero/index.html
@@ -554,10 +554,10 @@
 <div class="universal-wrapper">
   
     <div class="article-style"><p>All references used to prepare this database can be found in the following Zotero libray group:</p>
-<p>(<strong>Chemical garden</strong>)[]</p>
+<p>(<strong>Chemical gardens</strong>)[https://www.zotero.org/groups/3915735/chemical_garden_database/collections/W6HT9794]</p>
 <p>In addition, two more libraries with reviews and papers providing theoretical background on this topic can be consulted in the following links:</p>
-<p>(<em>Reviews</em>)[]</p>
-<p>(<em>Theoretical background</em>)[]</p>
+<p>(<em>Reviews</em>)[https://www.zotero.org/groups/3915735/chemical_garden_database/collections/HMWUCWJH]</p>
+<p>(<em>Theoretical background</em>)[https://www.zotero.org/groups/3915735/chemical_garden_database/collections/HRIDJWUH]</p>
 </div>
   
 
