--- a/zotero/index.html
+++ b/zotero/index.html
@@ -554,10 +554,10 @@
 <div class="universal-wrapper">
   
     <div class="article-style"><p>All references used to prepare this database can be found in the following Zotero libray group:</p>
-<p>(<strong>Chemical gardens</strong>)[https://www.zotero.org/groups/3915735/chemical_garden_database/collections/W6HT9794]</p>
+<p><a href="https://www.zotero.org/groups/3915735/chemical_garden_database/collections/W6HT9794" target="_blank" rel="noopener"><strong>Chemical gardens</strong></a></p>
 <p>In addition, two more libraries with reviews and papers providing theoretical background on this topic can be consulted in the following links:</p>
-<p>(<em>Reviews</em>)[https://www.zotero.org/groups/3915735/chemical_garden_database/collections/HMWUCWJH]</p>
-<p>(<em>Theoretical background</em>)[https://www.zotero.org/groups/3915735/chemical_garden_database/collections/HRIDJWUH]</p>
+<p><a href="https://www.zotero.org/groups/3915735/chemical_garden_database/collections/HMWUCWJH" target="_blank" rel="noopener"><em>Reviews</em></a></p>
+<p><a href="https://www.zotero.org/groups/3915735/chemical_garden_database/collections/HRIDJWUH" target="_blank" rel="noopener"><em>Theoretical background</em></a></p>
 </div>
   
 
