--- a/index.html
+++ b/index.html
@@ -638,8 +638,10 @@
 
   <div class="col-12">
     <p>The Chemical Gardens Database is a database which aims to curate all the scientific works performed about chemical gardens. In this database, previously reported chemical gardens are classified using the anions and cations used, and the setup in which the chemical garden growth were promoted. In all cases, the last column is devoted to provide the references where such experiments were described. All these references are also curated in a <a href="/chemicalgardens/zotero">Zotero group library</a></p>
-<p>If you find this database useful and you use it in your work, please <a href="/chemicalgardens/howtocite">cite</a> it as follows:
-Pimentel, Carlos, Zheng, Mingchuan, Sainz-Díaz, C. Ignacio, &amp; Cartwright, Julyan H. E. (2022). Chemical Gardens Database (alpha-0.0.1) [Data set]. Zenodo. <a href="https://doi.org/10.5281/zenodo.6607125" target="_blank" rel="noopener">https://doi.org/10.5281/zenodo.6607125</a></p>
+<p>If you find this database useful and you use it in your work, please <a href="/chemicalgardens/howtocite">cite</a> it as follows:</p>
+<ul>
+<li>Pimentel, Carlos, Zheng, Mingchuan, Sainz-Díaz, C. Ignacio, &amp; Cartwright, Julyan H. E. (2022). Chemical Gardens Database (alpha-0.0.1) [Data set]. Zenodo. <a href="https://doi.org/10.5281/zenodo.6607125" target="_blank" rel="noopener">https://doi.org/10.5281/zenodo.6607125</a></li>
+</ul>
 <p>In addition, if you miss your work in the database, please let us know to update it (<a href="mailto:carlos.pimentel-guerra@univ-grenoble-alpes.fr">carlos.pimentel-guerra@univ-grenoble-alpes.fr</a>).</p>
 <iframe style="border-style: none;" src="https://cpimentelguerra.com/chemicalgardens/database/database.html" width="100%" height="1000" ></iframe>  
 
