acknowledgements added and new reference added to the DB

--- a/about/index.html
+++ b/about/index.html
@@ -598,6 +598,10 @@
 <p>Julyan H. E. Cartwright</p>
 </li>
 </ul>
+<BR>
+<p><em>Acknowledgements</em></p>
+<p>The authors would like to acknowledge the contribution of the European COST Action CA17120 supported by the EUFramework Programme Horizon 2020.</p>
+<p>Carlos Pimentel has received funding from the European Union Horizon 2020 research and innovation programme under the Marie Sklodowska-Curie grant agreement No. 101021894 [CARS-CO2].</p>
 </div>
   
 
