Bot keywords and journals added

--- a/twitterbot/index.html
+++ b/twitterbot/index.html
@@ -614,9 +614,241 @@
 <div class="universal-wrapper">
   
     <div class="article-style"><p>You can find <a href="https://twitter.com/ChemGardenPaper" target="_blank" rel="noopener">here the twitter ChemGardenPaper bot</a>.</p>
-<p>This bot is based on the work developed by <a href="https://twitter.com/fxcoudert" target="_blank" rel="noopener">@fxcoudert</a>. The code used for the ChemGardenPaper will be uploaded to <a href="https://github.com/cpimentelguerra/PapersBot" target="_blank" rel="noopener">this repository</a>.</p>
-<p>Section under construction&hellip; The specific keywords used and the journals searched will also be shared here.</p>
-</div>
+<p>This bot is based on the work developed by <a href="https://twitter.com/fxcoudert" target="_blank" rel="noopener">@fxcoudert</a>. The code used for the ChemGardenPaper can be found in <a href="https://github.com/cpimentelguerra/PapersBot" target="_blank" rel="noopener">this repository</a>.</p>
+<p>Listed below are the keywords and journals where articles on chemical gardens and related topics are searched. The journals have been categorised according to the publishers who publish them. To see the complete list just click on the publisher of interest.</p>
+<h3 id="keywords">Keywords</h3>
+<ol>
+<li>chemical gardens</li>
+<li>chemical garden</li>
+<li>chemgarden</li>
+<li>chemobrionics</li>
+<li>chemobrionic</li>
+<li>mineral membranes</li>
+<li>mineral membrane</li>
+<li>hydrothermal chimney</li>
+<li>hydrothermal chimneys</li>
+<li>hydrothermal.vents</li>
+<li>hydrothermal.vent</li>
+</ol>
+<h3 id="journals">Journals</h3>
+<details>
+  <summary>ACS</summary>
+<ol>
+<li>Accounts of Chemical Research</li>
+<li>ACS Applied Energy Materials</li>
+<li>ACS Applied Materials &amp; Interfaces</li>
+<li>ACS Applied Nano Materials</li>
+<li>ACS Catalysis</li>
+<li>ACS Central Science</li>
+<li>ACS Earth and Space Chemistry</li>
+<li>ACS Energy Letters</li>
+<li>ACS Nano</li>
+<li>ACS Omega</li>
+<li>ACS Organic &amp; Inorganic Au</li>
+<li>ACS Sustainable Chemistry &amp; Engineering</li>
+<li>Chemical Reviews</li>
+<li>Chemistry of Materials</li>
+<li>Crystal Growth and Design</li>
+<li>Energy &amp; Fuels</li>
+<li>Environmental Science &amp; Technology</li>
+<li>Environmental Science &amp; Technology Letters</li>
+<li>Industrial &amp; Engineering Chemistry Research</li>
+<li>Inorganic Chemistry</li>
+<li>JACS</li>
+<li>JACS Au</li>
+<li>Journal of Chemical Education</li>
+<li>Journal of Chemical Information and Modeling</li>
+<li>Journal of Chemical Theory and Computation</li>
+<li>Journal of Medicinal Chemistry</li>
+<li>Journal of Natural Products</li>
+<li>The Journal of Organic Chemistry</li>
+<li>The Journal of Physical Chemistry A</li>
+<li>The Journal of Physical Chemistry B</li>
+<li>The Journal of Physical Chemistry C</li>
+<li>The Journal of Physical Chemistry Letters</li>
+<li>Langmuir</li>
+<li>Nano Letters</li>
+<li>Organic Letters</li>
+<li>Organic Process Research &amp; Development</li>
+<li>Organometallics</li>
+</ol>
+</details>
+<details>
+  <summary>AIP</summary>
+<ol>
+<li>Applied Physics Letters</li>
+<li>Journal of Applied Physics</li>
+<li>The Journal of Chemical Physics</li>
+</ol>
+</details>
+<details>
+  <summary>APS</summary>
+<ol>
+<li>Physical Review A</li>
+<li>Physical Review B</li>
+<li>Physical Review E</li>
+<li>Physical Review Letters</li>
+<li>Physical Review Materials</li>
+<li>Physical Review X</li>
+<li>Reviews of Modern Physics</li>
+</ol>
+</details>
+<details>
+  <summary>Cell</summary>
+<ol>
+<li>Cell Reports Physical Science</li>
+<li>Chem</li>
+<li>Matter</li>
+</ol>
+</details>
+<details>
+  <summary>Elsevier</summary>
+<ol>
+<li>Acta biomateralia</li>
+<li>Coordination Chemistry Reviews</li>
+<li>Inorganic Chemistry Communications</li>
+<li>Microporous and Mesoporous Materials</li>
+<li>Tetrahedron</li>
+<li>Tetrahedron Letters</li>
+</ol>
+</details>
+<details>
+  <summary>IOP</summary>
+<ol>
+<li>Europhysics Letters</li>
+</ol>
+</details>
+<details>
+  <summary>MDPI</summary>
+<ol>
+<li>Applied Science</li>
+<li>Crystals</li>
+<li>Minerals</li>
+</ol>
+</details>
+<details>
+  <summary>Nature</summary>
+<ol>
+<li>Communications Chemistry</li>
+<li>Communications Physics</li>
+<li>Nature</li>
+<li>Nature Catalysis</li>
+<li>Nature Chemistry</li>
+<li>Nature Communications</li>
+<li>Nature Energy</li>
+<li>Nature Materials</li>
+<li>Nature Nanotechnology</li>
+<li>Nature Physics</li>
+<li>Nature Reviews Chemistry</li>
+<li>Nature Reviews Materials</li>
+<li>Nature Reviews Physics</li>
+<li>npj Computational Materials</li>
+<li>npj Quantum Information</li>
+<li>npj Quantum Materials</li>
+<li>Scientific Data</li>
+<li>Scientific Reports</li>
+</ol>
+</details>
+<details>
+  <summary>Science</summary>
+<ol>
+<li>Science</li>
+<li>Science Advances</li>
+</ol>
+</details>
+<details>
+  <summary>Springer</summary>
+<ol>
+<li>Adsorption</li>
+<li>Journal of flow chemistry</li>
+<li>Journal of Materials Science</li>
+<li>Journal of Sol-Gel Science and</li>
+<li>Origin of Life and Evolution of Biospheres</li>
+<li>MRS Bulletin</li>
+<li>Structural chemistry</li>
+</ol>
+</details>
+<details>
+  <summary>Royal Society Publishing</summary>
+<ol>
+<li>Interface Focus</li>
+<li>Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences</li>
+<li>Proceedings of the Royal Society A: Mathematical, Physical and Engineering Sciences</li>
+<li>Proceedings of the Royal Society B: Biological Sciences</li>
+</ol>
+</details>
+<details>
+  <summary>RSC</summary>
+<ol>
+<li>Biomaterials Science</li>
+<li>Catalysis Science and Technology</li>
+<li>Chemical Communications</li>
+<li>Chemistry Education Research and Practice</li>
+<li>Chemical Science</li>
+<li>Chemical Society Reviews</li>
+<li>CrystEngComm</li>
+<li>Dalton Transactions</li>
+<li>Digital Discovery</li>
+<li>Energy &amp; Environmental Science</li>
+<li>Environmental Science: Nano</li>
+<li>Faraday Discussions</li>
+<li>Green chemistry</li>
+<li>Journal of Materials Chemistry A</li>
+<li>Journal of Materials Chemistry B</li>
+<li>Journal of Materials Chemistry C</li>
+<li>Lab on a Chip</li>
+<li>New Journal of Chemistry</li>
+<li>Nanoscale</li>
+<li>Organic &amp; Biomolecular Chemistry</li>
+<li>Physical Chemistry Chemical Physics</li>
+<li>Reaction Chemistry &amp; Engineering</li>
+<li>Soft Matter</li>
+</ol>
+</details>
+<details>
+  <summary>Wiley</summary>
+<ol>
+<li>AIChE Journal</li>
+<li>Advanced Energy Materials</li>
+<li>Advanced Functional Materials</li>
+<li>Advanced Healthcare Materials</li>
+<li>Advanced Materials</li>
+<li>Angewandte Chemie International Edition</li>
+<li>Chemistry – A European Journal</li>
+<li>Chemistry – An Asian Journal</li>
+<li>Chemistry–Methods</li>
+<li>ChemistryOpen</li>
+<li>ChemistrySelect</li>
+<li>ChemCatChem</li>
+<li>ChemElectroChem</li>
+<li>ChemMedChem</li>
+<li>ChemPhotoChem</li>
+<li>ChemPhysChem</li>
+<li>ChemPlusChem</li>
+<li>ChemSystemsChem</li>
+<li>European Journal of Inorganic Chemistry</li>
+<li>European Journal of Organic Chemistry</li>
+<li>Geobiology</li>
+<li>Geochemistry, Geophysics, Geosystems</li>
+<li>Geophysical Research letters</li>
+<li>Journal of Computational Chemistry</li>
+<li>Journal of Geophysical Research: Oceans</li>
+<li>Materials and corrosion</li>
+<li>Small</li>
+<li>The Chemical Record</li>
+</ol>
+</details>
+<details>
+  <summary>Miscellaneous</summary>
+<ol>
+<li>Astrobiology</li>
+<li>Boron</li>
+<li>Beilstein Journal of Organic Chemistry</li>
+<li>Synlett</li>
+<li>Synthesis</li>
+<li>PNAS</li>
+</ol>
+</details></div>
   
 
   
