minor correction in bot keywords

--- a/twitterbot/index.html
+++ b/twitterbot/index.html
@@ -618,17 +618,13 @@
 <p>Listed below are the keywords and journals where articles on chemical gardens and related topics are searched. The journals have been categorised according to the publishers who publish them. To see the complete list just click on the publisher of interest.</p>
 <h3 id="keywords">Keywords</h3>
 <ol>
-<li>chemical gardens</li>
-<li>chemical garden</li>
-<li>chemgarden</li>
-<li>chemobrionics</li>
-<li>chemobrionic</li>
-<li>mineral membranes</li>
-<li>mineral membrane</li>
-<li>hydrothermal chimney</li>
-<li>hydrothermal chimneys</li>
-<li>hydrothermal.vents</li>
-<li>hydrothermal.vent</li>
+<li>Chemical garden</li>
+<li>Chemgarden</li>
+<li>Chemobrionic</li>
+<li>Mineral membrane</li>
+<li>Hydrothermal chimney</li>
+<li>Hydrothermal vent</li>
+<li>Silica garden</li>
 </ol>
 <h3 id="journals">Journals</h3>
 <details>
