--- a/twitterbot/index.html
+++ b/twitterbot/index.html
@@ -625,6 +625,8 @@
 <li>Hydrothermal chimney</li>
 <li>Hydrothermal vent</li>
 <li>Silica garden</li>
+<li>Silicate garden</li>
+<li>Crystal garden</li>
 </ol>
 <h3 id="journals">Journals</h3>
 <details>
