--- a/twitterbot/index.html
+++ b/twitterbot/index.html
@@ -613,7 +613,7 @@
 
 <div class="universal-wrapper">
   
-    <div class="article-style"><p>You can find <a href="https://twitter.com/ChemGardenPaper" target="_blank" rel="noopener">here the twitter ChemGardenPaper bot</a>.</p>
+    <div class="article-style"><p>You can find <a href="https://twitter.com/ChemGardenPaper" target="_blank" rel="noopener">here the twitter ChemGardenPaper bot</a> and <a rel="me" href="https://fediscience.org/@ChemGardenPaper">here the mastodon ChemGardenPaper bot</a></p>
 <p>This bot is based on the work developed by <a href="https://twitter.com/fxcoudert" target="_blank" rel="noopener">@fxcoudert</a>. The code used for the ChemGardenPaper can be found in <a href="https://github.com/cpimentelguerra/PapersBot" target="_blank" rel="noopener">this repository</a>.</p>
 <p>Listed below are the keywords and journals where articles on chemical gardens and related topics are searched. The journals have been categorised according to the publishers who publish them. To see the complete list just click on the publisher of interest.</p>
 <h3 id="keywords">Keywords</h3>
@@ -627,6 +627,9 @@
 <li>Silica garden</li>
 <li>Silicate garden</li>
 <li>Crystal garden</li>
+<li>Geochemical self-organization</li>
+<li>Inorganic self-organization</li>
+<li>Mineral self-organization</li>
 </ol>
 <h3 id="journals">Journals</h3>
 <details>
