--- a/index.html
+++ b/index.html
@@ -697,7 +697,8 @@
 
 
   <div class="col-12">
-    <p>The Chemical Gardens Database is a database which aims to curate all the scientific works performed about chemical gardens. In this database, previously reported chemical gardens are classified using the anions and cations used, and the setup in which the chemical garden growth were promoted. In all cases, the last column is devoted to provide the references where such experiments were described. All these references are also curated in a <a href="/chemicalgardens/zotero">Zotero group library</a></p>
+    <p><strong>The database has been renamed and migrated to a new address. The new name is Chemobrionics Database and can be found at the following url: <a href="https://cpimentelguerra.com/chemobrionics/" target="_blank" rel="noopener">https://cpimentelguerra.com/chemobrionics/</a></strong></p>
+<p>The Chemical Gardens Database is a database which aims to curate all the scientific works performed about chemical gardens. In this database, previously reported chemical gardens are classified using the anions and cations used, and the setup in which the chemical garden growth were promoted. In all cases, the last column is devoted to provide the references where such experiments were described. All these references are also curated in a <a href="/chemicalgardens/zotero">Zotero group library</a></p>
 <p>If you find this database useful and you use it in your work, please <a href="/chemicalgardens/howtocite">cite</a> it as follows:</p>
 <ul>
 <li>Pimentel, Carlos, Zheng, Mingchuan, Sainz-Díaz, C. Ignacio, &amp; Cartwright, Julyan H. E. (2022). Chemical Gardens Database (alpha-0.0.8) [Data set]. Zenodo. <a href="https://doi.org/10.5281/zenodo.7174249" target="_blank" rel="noopener">https://doi.org/10.5281/zenodo.7174249</a></li>
